--- a/style.css
+++ b/style.css
@@ -1,23 +1,138 @@
-.first-section h1{
-    color:cornflowerblue;
+*{
+    margin: 0;
+
+    padding: 0;
+    font-family: 'Poppins', sans-serif;
+    box-sizing: border-box;
 }
 
-p{
-    color: rgb(73, 25, 73);
+body{
+    background: #080808;
+    color: #fff;
 }
 
-.first-title{
-    color:rgb(88, 157, 206);
+#header{
+    width: 100%;
+    height: 100vh;
+    background-image: url(images/cedric-vt-ua0SnGdN-m8-unsplash\ \(1\).jpg);
+    background-size: cover;
+    background-position: center;
 }
 
-#my-link{
-    color:black;
+.container{
+    padding: 10px 10%;
 }
 
-.gallery li{
-    color:brown; 
+nav{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-wrap: wrap;
 }
 
-.paragraph {
-    
+.logo{
+    width: 100px;
+}
+
+nav ul li{
+    display: inline-block;
+    list-style: none;
+    margin: 10px 20px;
+}
+
+nav ul li a{
+    color: #fff;
+    text-decoration: none;
+    font-size: 25px;
+    position: relative;
+}
+
+nav ul li a::after{
+    content: '';
+    width: 0;
+    height: 3px;
+    background: #019999;
+    position: absolute;
+    left: 0;
+    bottom: -6px;
+    transition: 0.5s;
+}
+
+nav ul li a:hover::after{
+    width: 100%;
+}
+
+.singleCol{
+    margin-top: 10px;
+    margin-left: 20px;
+}
+
+.header-text{
+    margin-top: 17%;
+    margin-left: 0%;
+    font-size: 60px;
+}
+
+.header-text h1{
+    font-size: 90px;
+    margin-top: 0px;
+    margin-left: 18%;
+}
+
+.social-icon1{
+    color: #aaa;
+    transition: color 0.2s;
+    text-decoration: none;
+    margin-left: 40%;
+    margin-top: 10000px;
+}
+
+.social-icon1:hover{
+    color: #019999;
+}
+
+.social-icon2{
+    color: #aaa;
+    transition: color 0.2s;
+    text-decoration: none;
+    margin-left: 30px;
+    margin-top: 10000px;
+}
+
+.social-icon2:hover{
+    color: #019999;
+}
+
+
+
+
+/*--------------------------About---------------------------*/
+#about{
+    padding: 80px 0;
+    color: #ababab;
+}
+
+.row{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.about-col-1{
+    flex-basis: 35%;
+}
+
+.about-col-1 img {
+    width: 100%;
+    border-radius: 15px;
+}
+
+.about-col-2{
+    flex-basis: 60%;
+}
+
+.sub-title{
+    font-size: 60px;
+    font-weight: 600;
+    color: #fff ;
 }
