--- a/style.css
+++ b/style.css
@@ -6,6 +6,11 @@
     box-sizing: border-box;
 }
 
+
+html{
+    scroll-behavior: smooth;
+}
+
 body{
     background: #080808;
     color: #fff;
@@ -24,14 +29,18 @@ body{
 }
 
 nav{
+
     display: flex;
     align-items: center;
     justify-content: space-between;
     flex-wrap: wrap;
+   /* background-color: #080808; */
 }
 
 .logo{
     width: 100px;
+    display: hidden;
+
 }
 
 nav ul li{
@@ -69,8 +78,9 @@ nav ul li a:hover::after{
 
 .header-text{
     margin-top: 17%;
-    margin-left: 0%;
+    margin-left: 17%;
     font-size: 60px;
+    
 }
 
 .header-text h1{
@@ -80,10 +90,10 @@ nav ul li a:hover::after{
 }
 
 .social-icon1{
-    color: #aaa;
+    color: #fff;
     transition: color 0.2s;
     text-decoration: none;
-    margin-left: 40%;
+    margin-left: 34%;
     margin-top: 10000px;
 }
 
@@ -92,7 +102,7 @@ nav ul li a:hover::after{
 }
 
 .social-icon2{
-    color: #aaa;
+    color: #fff;
     transition: color 0.2s;
     text-decoration: none;
     margin-left: 30px;
@@ -136,3 +146,231 @@ nav ul li a:hover::after{
     font-weight: 600;
     color: #fff ;
 }
+
+
+.tab-titles{
+    display: flex;
+    margin: 20px 0 40px;
+}
+
+.tab-links{
+    margin-right: 50px;
+    font-size: 18px;
+    font-weight: 500;
+    cursor: pointer;
+    position: relative;
+    transition: transform 0.5s;
+}
+
+.tab-links:hover{
+    color: #019999;
+    transform: translateY(-5px);
+}
+
+.tab-links::after{
+    content: '';
+    width: 0;
+    height: 3px;
+    background: #019999;
+    position: absolute;
+    left: 0;
+    bottom: -8px;
+    transition: 0.5s;
+}
+
+.tab-links.active-link::after{
+    width: 100%;
+}
+
+.tab-contents ul li {
+    list-style: none;
+    margin: 10px 0;
+}
+
+.tab-contents ul li span {
+    color: #019999;
+    font-size: 14px;
+}
+
+.tab-contents {
+    display: none;
+}
+
+.tab-contents.active-tab{
+    display: block;
+}
+
+
+/*-------------------------- end of About---------------------------*/
+
+
+/*-------------------------- Portfolio -------------------------------*/
+
+#portfolio {
+    padding: 50px 0;
+}
+
+.work-list{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-gap: 40px;
+    margin-top: 50px;
+}
+
+.work{
+    border-radius: 10px;
+    position: relative;
+    overflow: hidden;
+}
+
+.work img{
+    width: 100%;
+    border-radius: 10px;
+    display: block;
+    transition: transform 0.5s;
+}
+
+.layer{
+    width: 100%;
+    height: 0;
+    background: linear-gradient(rgba(0,0,0,0.6) , #019999);
+    border-radius: 10px;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    padding: 0 40px;
+    text-align: center;
+    font-size: 14px;
+    transition: height 0.5s;
+}
+
+.layer h3{
+    font-size: 30px;
+    font-weight: 500;
+    margin-bottom: 20px;
+}
+
+.later a{
+    margin-top: 20px;
+    color: #ff004f;
+    text-decoration: none;
+    font-size: 18px;
+    line-height: 60px;
+    background: #fff;
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    text-align: center;
+
+}
+
+.layer a img{
+    margin-top: 20px;
+    text-decoration: none;
+    color: #fff;
+    height: auto; 
+    width: auto; 
+    max-width: 40px; 
+    max-height: 40px;
+} 
+
+.work:hover img{
+    transform: scale(1.1);
+}
+
+.work:hover .layer{
+    height: 100%;
+}
+
+/*---------------------------------- contact -----------------------------*/
+
+.contact-left{
+    flex-basis: 35%;
+    margin-top: 100px;
+}
+
+.contact-right{
+    margin-top: 100px;
+    flex-basis: 60%;
+}
+
+.contact-left p{
+    margin-top: 40px;
+}
+
+.contact-left p i{
+    color: #019999;
+    margin-right: 15px;
+    font-size: 25px;
+}
+
+.social-icons{
+    margin-top: 30px;
+}
+
+.social-icons a{
+    text-decoration: none;
+    font-size: 30px;
+    margin-right: 15px;
+    color: #ababab;
+    display: inline-block;
+    transition: transform 0.5s;
+}
+
+.social-icons a:hover{
+    color: #019999;
+    transform: translateY(-5px);
+}
+
+.btn{
+    display: block;
+    margin: 50px auto;
+    width: fit-content;
+    border: 1px solid #019999;
+    padding: 14px 50px;
+    border-radius: 6px;
+    text-decoration: none;
+    color: #fff;
+    transition: background 0.5s;
+}
+
+.btn:hover{
+    background: #019999;
+}
+
+.btn.btn2{
+    display: inline-block;
+    background: #019999;
+}
+
+.contact-right form{
+    width: 100%;
+}
+
+form input, form textarea{
+    width: 100%;
+    border: 0;
+    outline: none;
+    background: #262626;
+    padding: 15px;
+    margin: 15px 0;
+    color: #fff;
+    font-size: 18px;
+    border-radius: 6px;
+}
+
+form btn2{
+    padding: 14px 60px;
+    font-size: 18px;
+    margin-top: 20px;
+    cursor: pointer;
+}
+
+
+
+/*---------------------------------------- CSS for small screen -----------------------------*/
